force-app/main/default/objects/TrainingProduct__c/TrainingProduct__c.object-meta.xml
<CustomObject>
    <label>Training Product</label>
    <nameField>
        <label>Training Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>