force-app/main/default/objects/TrainingProduct__c/fields/ProductDescription__c.field-meta.xml
<CustomField>
    <fullName>ProductDescription__c</fullName>
    <label>Product Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>