force-app/main/default/objects/TrainingProduct__c/fields/ProductTax__c.field-meta.xml
<CustomField>
    <fullName>ProductTax__c</fullName>
    <formula>ProductPrice__c  *  ( $CustomMetadata.TrainingVATRateMetadata__mdt.StandardRate.Tax__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Isolated tax amount calculated from the product price.</inlineHelpText>
    <label>Product Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>